scrollbar bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
   padding: 0;
   text-align: center;
   color: black;
-  min-height: 100vh;
+  height: 100vh;
   overflow: scroll;
   font-family: "Montserrat Alternates", sans-serif;
   /* background-image: url(./components/images/islamic-new-year-pattern-background.jpg);
